<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/color_background_one"
    tools:context="com.luisgonzalez.demo.FRAGMENTS.mAboutFragmentView">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/titulo_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:text="@string/titulo_about" />

    <TextView
        android:id="@+id/contenido_about"
        android:layout_below="@+id/titulo_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:text="@string/contenido_about" />

    <Button
        android:id="@+id/button_logout"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/boton_salir"
        />

</RelativeLayout>
