<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.luisgonzalez.demo.FRAGMENTS.mRegisterFragment"
    android:background="@color/colorPrimary">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/titulo_registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_titulo_registro"
        android:layout_marginTop="20dp"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:gravity="center"/>

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@id/titulo_registro"
       android:layout_margin="20dp"
       android:background="#80ffffff">
       <EditText
           android:id="@+id/nombre_registro"
           android:layout_width="match_parent"
           android:layout_marginTop="10dp"
           android:layout_marginLeft="10dp"
           android:layout_marginRight="10dp"
           android:layout_height="60dp"
           android:inputType="textPersonName"
           android:hint="@string/hint_nombre_registro"
           />
       <EditText
           android:id="@+id/apellido_registro"
           android:layout_width="match_parent"
           android:layout_height="60dp"
           android:layout_marginTop="10dp"
           android:layout_marginLeft="10dp"
           android:layout_marginRight="10dp"
           android:inputType="textPersonName"
           android:hint="SU APELLIDO"
           android:layout_below="@id/nombre_registro"/>
       <EditText
           android:id="@+id/mail_registro"
           android:layout_width="match_parent"
           android:layout_height="60dp"
           android:layout_marginTop="10dp"
           android:layout_marginLeft="10dp"
           android:layout_marginRight="10dp"
           android:hint="SU CORREO ELECTRONICO"
           android:inputType="textEmailAddress"
           android:layout_below="@id/apellido_registro"/>
       <EditText
           android:id="@+id/pass_registro"
           android:layout_below="@+id/mail_registro"
           android:layout_width="match_parent"
           android:layout_marginTop="10dp"
           android:layout_marginLeft="10dp"
           android:layout_marginRight="10dp"
           android:inputType="textPassword"
           android:layout_height="60dp"
           android:hint="@string/hint_pass_registro"
           />
       <Button
           android:id="@+id/button_registro"
           android:layout_width="match_parent"
           android:layout_height="80dp"
           style="@style/Widget.AppCompat.Button.Colored"
           android:layout_alignParentBottom="true"
           android:layout_marginBottom="40dp"
           android:layout_marginLeft="10dp"
           android:layout_marginRight="10dp"
           android:text="@string/boton_registrar"/>
   </RelativeLayout>

</RelativeLayout>
